# tollbooth-shortlinks

./: .fastmcp.yaml  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  server.json  server.py
.github/workflows/: agentic-deploy-verify.yml  agentic-housekeeper.yml  agentic-qa.yml  ci.yml  publish-mcp-registry.yml
tests/: test_server.py
val/: redirect.js
